fixing the overflow to a second page

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   text-align: center;
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 1px);
+  overflow: hidden;
 }
 
 canvas {
